fix word wrap problems in chat for ff

--- a/web/saito/css-imports/saito-chat.css
+++ b/web/saito/css-imports/saito-chat.css
@@ -498,7 +498,7 @@
 .chat-message-line {
   position: relative;
   padding: 0.25rem;
-  word-wrap: break-all;
+  word-wrap: anywhere;
 }
 
 .saito-userline-reply {
